[gd_scene load_steps=16 format=3 uid="uid://cvf5r087rjhyb"]

[ext_resource type="Script" path="res://scenes/UI.gd" id="1_f1jnl"]
[ext_resource type="Script" path="res://scenes/BuildingView.gd" id="2_2o3ve"]
[ext_resource type="Texture2D" uid="uid://c51cu1guexhg4" path="res://assets/icons/up-arrow.png" id="2_6gg17"]
[ext_resource type="Texture2D" uid="uid://c5rrffmn3uioo" path="res://assets/icons/bar-chart.png" id="3_irvke"]
[ext_resource type="Texture2D" uid="uid://dxefyrrjmrq20" path="res://assets/icons/manager.png" id="4_b5c2b"]
[ext_resource type="FontFile" uid="uid://dcampv481ilui" path="res://reso/styles/Typo_Round_Bold_Demo.otf" id="5_1nov5"]
[ext_resource type="Texture2D" uid="uid://b767vxhiafavh" path="res://assets/icons/network.png" id="5_mlpys"]
[ext_resource type="Script" path="res://scenes/HUD.gd" id="7_gj7eq"]
[ext_resource type="Texture2D" uid="uid://ciqa5h2axcg7j" path="res://assets/icons/coins.png" id="7_xdrbl"]
[ext_resource type="Texture2D" uid="uid://ctmdcvwu74hhk" path="res://assets/icons/piggy-bank.png" id="8_yj4xw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvosu"]
bg_color = Color(0.372549, 0.654902, 0.890196, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsny0"]
content_margin_left = 20.0
content_margin_top = 4.0
bg_color = Color(0.447059, 0.984314, 0.529412, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="LabelSettings" id="LabelSettings_v8rq2"]
font = ExtResource("5_1nov5")
font_size = 10
outline_size = 2
outline_color = Color(0.168627, 0.168627, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8214s"]
bg_color = Color(0.372549, 0.654902, 0.890196, 1)
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmwg5"]
content_margin_left = 24.0
content_margin_right = 12.0
bg_color = Color(0.0470588, 0.0823529, 0.164706, 0.721569)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_f1jnl")

[node name="BuildingView" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2o3ve")

[node name="Panel" type="Panel" parent="BuildingView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 378.0
offset_top = 58.0
offset_right = -14.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jvosu")

[node name="VBoxContainer" type="VBoxContainer" parent="BuildingView/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 16.0
offset_right = -12.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BuildingView/Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BuildingView/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="BuildingView/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bakery"

[node name="Level" type="Label" parent="BuildingView/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_wsny0")
text = "Level 1"

[node name="TextureRect" type="TextureRect" parent="BuildingView/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Level"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -7.5
offset_right = 18.0
offset_bottom = 8.5
grow_vertical = 2
texture = ExtResource("2_6gg17")
expand_mode = 1
stretch_mode = 5

[node name="EXPBar" type="ProgressBar" parent="BuildingView/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 40.0
show_percentage = false

[node name="EXPLabel" type="Label" parent="BuildingView/Panel/VBoxContainer/HBoxContainer/EXPBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -12.5
offset_right = 58.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "0/100"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BuildingView/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BuildingView/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_irvke")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Business improvement"

[node name="Label2" type="Label" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Increase profit for more income"

[node name="BI" type="Button" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "999k"

[node name="Label" type="Label" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer/BI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = -4.0
offset_right = 37.5
offset_bottom = 20.0
grow_horizontal = 2
text = "Improve"
label_settings = SubResource("LabelSettings_v8rq2")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="BuildingView/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_b5c2b")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Employee Benefits"

[node name="Label2" type="Label" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Increase employee income and benefits"

[node name="EB" type="Button" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "999k"

[node name="Label" type="Label" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer2/EB"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = -4.0
offset_right = 37.5
offset_bottom = 20.0
grow_horizontal = 2
text = "Increase"
label_settings = SubResource("LabelSettings_v8rq2")
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="BuildingView/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_mlpys")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Marketing"

[node name="Label2" type="Label" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Effective marketing to transform paying customers"

[node name="M" type="Button" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "999k"

[node name="Label" type="Label" parent="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer3/M"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = -4.0
offset_right = 37.5
offset_bottom = 20.0
grow_horizontal = 2
text = "Market"
label_settings = SubResource("LabelSettings_v8rq2")
horizontal_alignment = 1

[node name="HUD" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.618316
offset_right = 0.0799866
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8214s")
script = ExtResource("7_gj7eq")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 3.0
offset_right = -23.0002
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Income" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_cmwg5")
text = "10m/min"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HUD/HBoxContainer/Income"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -12.0
offset_right = 23.0
offset_bottom = 12.0
grow_vertical = 2
texture = ExtResource("3_irvke")
expand_mode = 1
stretch_mode = 5

[node name="Gold" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_cmwg5")
text = "10.4m"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HUD/HBoxContainer/Gold"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -12.0
offset_right = 23.0
offset_bottom = 12.0
grow_vertical = 2
texture = ExtResource("7_xdrbl")
expand_mode = 1
stretch_mode = 5

[node name="Gems" type="Label" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_cmwg5")
text = "999"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HUD/HBoxContainer/Gems"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -12.0
offset_right = 23.0
offset_bottom = 12.0
grow_vertical = 2
texture = ExtResource("8_yj4xw")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="BuildingView" to="BuildingView" method="_on_gui_input"]
[connection signal="visibility_changed" from="BuildingView" to="BuildingView" method="_on_visibility_changed"]
[connection signal="pressed" from="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer/BI" to="BuildingView" method="_on_bi_pressed"]
[connection signal="pressed" from="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer2/EB" to="BuildingView" method="_on_eb_pressed"]
[connection signal="pressed" from="BuildingView/Panel/VBoxContainer/VBoxContainer/HBoxContainer3/M" to="BuildingView" method="_on_m_pressed"]
